<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.copaba.poloth85.newpetagramfragment.ActivityAbout"
    android:orientation="vertical"
    android:background="@drawable/puppy"
    >
    <include android:id="@+id/MiActionBar" layout="@layout/actionbar"></include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_gravity="center">
            <ImageView
                android:layout_width="@dimen/image"
                android:layout_height="@dimen/image"
                android:layout_gravity="center"
                android:src="@drawable/contacts_48"
                android:background="@color/back"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/back">
            <TextView
                android:id="@+id/tvNombreAb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvNombreAb"/>
            <TextView
                android:id="@+id/tvFechaAb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvFechaAb"/>
            <TextView
                android:id="@+id/tvEscuelaAb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvEscuelaAb"/>
            <TextView
                android:id="@+id/tvProfesionAb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvProfesionAb"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
