<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout1"
    android:background="@drawable/puppy"
    tools:context="net.copaba.poloth85.newpetagramfragment.ActivityContacto"
    android:orientation="vertical">
    <include android:id="@+id/MiActionBar" layout="@layout/actionbar"></include>
    <LinearLayout
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_height="match_parent"
        android:layout_width="match_parent">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <android.support.design.widget.TextInputEditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fnombre"
        android:imeOptions="actionNext"
        android:singleLine="true"
        />
        </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/femail"
            android:imeOptions="actionNext"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/msg">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fmensaje"
            android:imeOptions="actionDone"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_enviar"
        android:textColor="@color/colorBlanco"
        android:id="@+id/button"
        android:background="@color/colorAccent"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
</LinearLayout>